--- a/app/views/tadpoles/show.html.erb
+++ b/app/views/tadpoles/show.html.erb
@@ -1,8 +1,10 @@
 <div class="card">
   <h1><%= @tadpole.name %> the Tadpole</h1>
 
-  <!-- make form to make "Become a frog" button here -->
-  <!-- the form should post to /tadpoles/:id/metamorphose -->
+  
+<%= form_for @tadpole,method: :post, url: {action: "metamorphose"} do |f| %>
+  <%= f.submit "Become a frog" %>
+<% end %>
 
   <p>Color: <%= @tadpole.color %></p>
   <p>Parent: <a href="/frogs/<%= @tadpole.frog.id %>"><%= @tadpole.frog.name %></a></p>
